--- a/mysql/活动创建与管理的数据库.md
+++ b/mysql/活动创建与管理的数据库.md
@@ -12,3 +12,6 @@ l 活动地址(eventLocation) ：活动举办的地址
 
 l 活动类型ID(eventTypeID) ：活动的模板类别
 
+
+event新增——审批
+ALTER TABLE event ADD COLUMN requireApproval BOOLEAN DEFAULT FALSE;
