资源管理相关的类，数据库，代码

--- a/mysql/活动创建与管理的数据库.md
+++ b/mysql/活动创建与管理的数据库.md
@@ -12,6 +12,46 @@ l 活动地址(eventLocation) ：活动举办的地址
 
 l 活动类型ID(eventTypeID) ：活动的模板类别
 
-
 event新增——审批
 ALTER TABLE event ADD COLUMN requireApproval BOOLEAN DEFAULT FALSE;
+
+活动ID（eventID）：唯一标识活动的主键
+
+活动名（eventName）：活动在系统中的显示名称
+
+日期（date）：精确到日
+
+预约人id（reservationUserId）：标识预约用户
+
+活动类型id（eventTypeID）：标识活动类型
+
+```python
+event_mapping = {
+    0:"大型考试",
+    1:"统一考试",
+    2:"宣讲",
+    3:"授课",
+    4:"课程考试",
+    5:"开会",
+    6:"学生活动",
+    7:"其他"
+}
+```
+
+活动人数（numberOfPeople）：参与活动的人数，当期望地点不能满足时，用于查找是否有能够容纳活动人数的其他教室
+
+期望地点（preferredLocation）：在表单中搜索选择一个（或者做成酒店选房的那种，可以查看选定的时间的占用情况）
+
+活动时间（time）：
+
+```python
+event_mapping = {
+    0:"8:00-9:35",
+    1:"9:55-11:30",
+    2:"13:30-15:05",
+    3:"15:20-16:55",
+    4:"17:05-18:45",
+    5:"19:30-21:05"
+}
+```
+
