--- a/mysql/注册登录的数据库.md
+++ b/mysql/注册登录的数据库.md
@@ -44,4 +44,4 @@ l 权限ID（PermissionID）：关联到权限表的外键
 邀请单ID(listID):唯一标识邀请单的主键
 邀请对象类型(inviteType):显示邀请对象的类型（个人或班级）
 邀请事件(eventID):邀请进入的事件ID
-邀请对象(invitedID):被邀请的对象ID（个人或班级）
+邀请对象(invitedID):被邀请的对象ID（个人或班级）,这是一个列表，因为可以一次性邀请多个
